--- a/supermarket-sales-analysis.html
+++ b/supermarket-sales-analysis.html
@@ -7551,7 +7551,7 @@ a.anchor-link {
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># load dataset from local file</span>
-<span class="n">data</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'C:/Users/denis/PycharmProjects/scientificProject/data/supermarket_sales.csv'</span><span class="p">)</span>
+<span class="n">data</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'Path to file /data/supermarket_sales.csv'</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
